--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,9 @@ a:hover, a:active {
 }
 
 .relativepic {
-  position: relative;
-  bottom: 95%;
+  position: absolute;
+  bottom: 43%;
+  left: 10%;
   z-index: 100;
 }
 
@@ -161,6 +162,11 @@ a:hover, a:active {
 
 .carousel.carousel-fade .active.left,
 .carousel.carousel-fade .active.right {
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -ms-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+  
   left: 0;
   z-index: 2;
   opacity: 0;
@@ -200,6 +206,12 @@ a:hover, a:active {
   -webkit-box-shadow: -4px 6px 88px -23px rgba(0,0,0,0.75);
   -moz-box-shadow: -4px 6px 88px -23px rgba(0,0,0,0.75);
   box-shadow: -4px 6px 88px -23px rgba(0,0,0,0.75);
+}
+
+.link_wrap: {
+  position: relative;
+  bottom: 95%;
+  z-index: 100;
 }
 
 #back_to_top {
