--- a/css/style.css
+++ b/css/style.css
@@ -191,14 +191,12 @@ a:hover, a:active {
 }
 
 .teaser_button {
-  margin-right: auto;
-  margin-left: auto;
-  display: block;
-  padding-right: 5%;
-  padding-left: 5%;
+ 
+ 
   margin-bottom: 5%;
   border: 2px solid #000;
-  border-radius: 50%;
+  border-radius: 5px;
+  margin-right: 10%;
 
 }
 
@@ -284,7 +282,18 @@ a:hover, a:active {
   height: 329px;
 }
  
+.toolbar_button{
+  position: fixed;
+  top: 30%;
+}
 
+.toolbar_button2{
+  position: fixed;
+  top: 30%;
+  margin-left: 15px;
+  position: fixed;
+  top: 80%;
+}
 .toolbar {
   /*
   background-image: url("../images/crossword.png") !important;
@@ -292,6 +301,7 @@ a:hover, a:active {
   */
   background-color: #D6D6D6;
   position: fixed;
+  margin-left: 10px;
   border-style: solid;
   border-color:  #858585; 
   top: 40%;
@@ -338,10 +348,23 @@ form .input-row {
 }
 
 .addform {
-  padding-top: 10%;
-  padding-left:10%;
   padding-bottom:10%;
 }
+
+.paddtop {
+  padding-top: 5%;
+}
+
+.glyphicon-chevron-left {
+  float: right;
+  font-size: 50px;
+  padding-top:10%;
+  color: black;
+}
+
+.glyphicon-chevron-right {
+  font-size: 50px;
+  padding-top:10%;
 
 .dayForm {
   
