--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,9 @@ html , body {
     */
 }
 
-.text_no_1:hover, .text_no_2:hover, .text_no_3:hover, .text_no_4:hover, .text_no_5:hover {
+.text_no_1:hover , .text_no_2:hover , .text_no_3:hover , .text_no_4:hover , .text_no_5:hover {
     text-shadow: 0 0 10px #858585; 
+
 }
 
 
@@ -190,14 +191,46 @@ a:hover, a:active {
   padding-bottom: 5%;
 }
 
-.teaser_button {
- 
- 
-  margin-bottom: 5%;
-  border: 2px solid #000;
-  border-radius: 5px;
-  margin-right: 10%;
+.currentMonth {
+  padding-bottom: 25%;
+}
 
+.teaser_button {
+   margin-top: 10%;
+   border-radius: 20px;
+   background-image: url("../images/crossword.png") !important;
+   background-repeat: repeat;
+   border: solid 2px #000;
+   width: 100px;
+
+}
+
+#ready_to_send {
+   margin-top: 10%;
+   border-radius: 20px;
+   background-image: url("../images/crossword.png") !important;
+   background-repeat: repeat;
+   border: solid 2px #000;
+   width: 200px;
+
+   display: block;
+   margin: 0 auto;
+   margin-top: 2%;
+   margin-bottom: 2%;
+
+
+}
+
+#ready_to_send:hover {
+  background-image: none !important;
+  background-color: green !important;
+
+ z-index: -1;
+  -webkit-box-shadow: -4px 6px 88px -23px rgba(0,0,0,0.75);
+  -moz-box-shadow: -4px 6px 88px -23px rgba(0,0,0,0.75);
+  box-shadow: -4px 6px 88px -23px rgba(0,0,0,0.75);
+
+  
 }
 
 
@@ -219,11 +252,13 @@ a:hover, a:active {
   height: 25px;
 }
 
-  .teaser_button:hover {
-  background-color: #50A150;
+.teaser_button:hover {
   -webkit-box-shadow: -4px 6px 88px -23px rgba(0,0,0,0.75);
   -moz-box-shadow: -4px 6px 88px -23px rgba(0,0,0,0.75);
   box-shadow: -4px 6px 88px -23px rgba(0,0,0,0.75);
+  background-image: none !important;
+  background-color: green !important;
+
 }
 
 .link_wrap: {
@@ -282,18 +317,6 @@ a:hover, a:active {
   height: 329px;
 }
  
-.toolbar_button{
-  position: fixed;
-  top: 30%;
-}
-
-.toolbar_button2{
-  position: fixed;
-  top: 30%;
-  margin-left: 15px;
-  position: fixed;
-  top: 80%;
-}
 .toolbar {
   /*
   background-image: url("../images/crossword.png") !important;
@@ -323,6 +346,7 @@ a:hover, a:active {
  }
 
  .toolbox:hover {
+  background-image: none !important;
   background-color: #8CD0FF !important;
  }
 
@@ -365,7 +389,7 @@ form .input-row {
 .glyphicon-chevron-right {
   font-size: 50px;
   padding-top:10%;
-
+}
 .dayForm {
   
 }
